# helloworld-grpc

./: .gitignore  README.md
client/: main.go
client-bun/: README.md  index.ts  package.json
client-go/: main.go
client-py/: client.py  helloworld_pb2.py  helloworld_pb2_grpc.py
client-rust/: Cargo.toml  build.rs
client-rust/src/: main.rs
proto/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
server/: main.go
